fix gap

--- a/style.css
+++ b/style.css
@@ -141,7 +141,6 @@ input {
   justify-content: space-between;
   align-items: center;
   background-color: #b30006;
-  gap: 16px;
   top: 0;
   left: 0;
   z-index: 10;
