--- a/style/_header.scss
+++ b/style/_header.scss
@@ -8,7 +8,6 @@
     align-items: center;
     background-color: $accent-color;
     // padding-left: 15px;
-    gap: 16px;
     // position: fixed;
     top: 0;
     left: 0;
